src/test/deca/context/valid/created/decl_class/return_int_void.deca
// Description :
//    return mauvais type : void, demandé int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: (2.7) Type de retour effectif : void, déclaré : int

class A{
int met(){
}
}