src/test/deca/context/invalid/created/return/return_float_int.deca
// Description :
//    return mauvais type : float, demandé int
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: ?? 

class A{
float met(){
return 1;
}
}